--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Capstone</string>
+    <string name="edittext_hint">Ketikkan pesan</string>
+    <string name="btn_send_desc">Send message</string>
 </resources>
