--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="category6">Traveloka QR Scanner</string>
     <string name="icon_category_desc">Icon Category</string>
     <string name="title_Category">Perihal Apa yang Ingin \nDitanyakan?</string>
+    <string name="bot_name">si Loka</string>
 </resources>
