adding back_title string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="sloka">Sloka</string>
     <string name="kembali_ke_kategori">kembali ke kategori</string>
     <string name="daftar_pesan">daftar pesan</string>
+
+    <string name="back_title">Kembali</string>
 </resources>
