theme coloring modification string language fixing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,26 +18,26 @@
     <string name="btn_onboard_done_desc">selesai</string>
     <string name="img_splashlogo">Splash Logo</string>
 
-    <string name="connection_dialog_title">Connection Lost</string>
-    <string name="connection_dialog_content">Your device is not connected to the internet. Make sure to check your internet connection before continuing the application</string>
-    <string name="connection_dialog_confirm">Close</string>
+    <string name="connection_dialog_title">Koneksi terputus</string>
+    <string name="connection_dialog_content">Perangkat Anda tidak terhubung ke internet. Pastikan untuk memeriksa koneksi internet Anda sebelum melanjutkan aplikasi</string>
+    <string name="connection_dialog_confirm">Tutup</string>
     <string name="category1">Sapa si Loka</string>
     <string name="category2">Informasi Umum Pembayaran</string>
     <string name="category3">Informasi Promo</string>
     <string name="category4">Kupon Traveloka</string>
     <string name="category5">Pembayaran dengan IDR</string>
-    <string name="category6">Traveloka QR Scanner</string>
-    <string name="icon_category_desc">Icon Category</string>
+    <string name="category6">Pemindai QR Traveloka</string>
+    <string name="icon_category_desc">Kategori Ikon</string>
     <string name="title_Category">Perihal Apa yang Ingin \nDitanyakan?</string>
-    <string name="ask_a_question">ask a question</string>
-    <string name="back_to_category">Back to category</string>
+    <string name="ask_a_question">tanyakan sesuatu</string>
+    <string name="back_to_category">Kembali ke kategori</string>
     <string name="contentdesc_button_ask">tanyakan sebuah pertanyaan tombol</string>
     <string name="bot_name">SLoka</string>
     <string name="halo_pengguna">Halo Pengguna</string>
     <string name="memilih_fitur">Ingin Menggunakan fitur apakah anda?</string>
-    <string name="voice_nassist">Voice \nAssist</string>
+    <string name="voice_nassist">Bantuan \nSuara</string>
     <string name="menggunakan_aksesbilitas">menggunakan aksesbilitas</string>
-    <string name="just_ntext">Just\nText</string>
+    <string name="just_ntext">Hanya\nTeks</string>
     <string name="tidak_menggunakan_aksesbilitas">tidak menggunakan aksesbilitas</string>
     <string name="gambar_fitur_aksesbilitas">fitur aksesbilitas</string>
     <string name="pilih_kategori_perihal_apa_yang_ingin_anda_tanyakan">pilih kategori perihal apa yang ingin anda tanyakan</string>
@@ -45,7 +45,7 @@
     <string name="informasi_promo">informasi promo</string>
     <string name="kupon_traveloka">kupon traveloka</string>
     <string name="pembayaran_dengan_rupiah">pembayaran dengan rupiah</string>
-    <string name="traveloka_qr_scanner">traveloka QR SCanner</string>
+    <string name="traveloka_qr_scanner">Pemindai QR Traveloka</string>
     <string name="sloka">Sloka</string>
     <string name="kembali_ke_kategori">kembali ke kategori</string>
     <string name="daftar_pesan">daftar pesan</string>
